oneshot 프롬프트 적용

--- a/test_oneshot.ipynb
+++ b/test_oneshot.ipynb
@@ -2,41 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: BNB_CUDA_VERSION=122 environment variable detected; loading libbitsandbytes_cuda122.so.\n",
-      "This can be used to load a bitsandbytes version that is different from the PyTorch CUDA version.\n",
-      "If this was unintended set the BNB_CUDA_VERSION variable to an empty string: export BNB_CUDA_VERSION=\n",
-      "If you use the manual override make sure the right libcudart.so is in your LD_LIBRARY_PATH\n",
-      "For example by adding the following to your .bashrc: export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:<path_to_cuda_dir/lib64\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/alpaco/anaconda3/envs/fast_chat/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
       "==((====))==  Unsloth 2025.5.7: Fast Llama patching. Transformers: 4.51.3.\n",
       "   \\\\   /|    NVIDIA GeForce RTX 3090. Num GPUs = 1. Max memory: 23.691 GB. Platform: Linux.\n",
       "O^O/ \\_/ \\    Torch: 2.4.0+cu121. CUDA: 8.6. CUDA Toolkit: 12.1. Triton: 3.0.0\n",
@@ -66,17 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unsloth 2025.5.7 patched 32 layers with 32 QKV layers, 32 O layers and 32 MLP layers.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PEFT(파라미터 효율적 파인튜닝) 모델 설정\n",
     "model = FastLanguageModel.get_peft_model(\n",
@@ -99,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +72,7 @@
        "'<|end_of_text|>'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +149,7 @@
        " 'Below is an instruction that describes a task. Write a response that appropriately completes the request.\\n\\n### Instruction:\\n회사를 옮기면서 직급도 올라서, 지금은 과장이에요.\\n\\n### Response:\\n그렇군요. 새로운 환경이라 적응이 필요하겠어요.<|end_of_text|>']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +181,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='60' max='60' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [60/60 01:25, Epoch 0/1]\n",
+       "      [60/60 01:26, Epoch 0/1]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -517,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +492,7 @@
        " 'wellnis/tokenizer.json')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -578,64 +542,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ...기존 모델/토크나이저 로딩 코드 이후...\n",
+    "\n",
+    "from transformers import TextStreamer\n",
+    "\n",
+    "# 1. 원샷 프롬프트 정의\n",
+    "one_shot_prompt = \"\"\"\n",
+    "### Instruction:\n",
+    "너무 무기력해.\n",
+    "\n",
+    "### Response:\n",
+    "증상: 무기력증 무기력감은 삶의 목적과 의미를 잃고, 아무 일도 하지 못하는 상태를 말합니다. 이 증상은 우울증과 함께 나타날 수 있지만, 우울감만으로는 설명이 안되는 경우가 많습니다. 무기력감은 수면 문제, 식욕 변화, 집중력 저하 등의 증상이 동반될 수 있습니다.\n",
+    "\n",
+    "### Instruction:\n",
+    "너무 우울해.\n",
+    "\n",
+    "### Response:\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<|begin_of_text|>Below is an instruction that describes a task. Write a response that appropriately completes the request.\n",
+      "<|begin_of_text|>\n",
+      "### Instruction:\n",
+      "너무 무기력해.\n",
+      "\n",
+      "### Response:\n",
+      "증상: 무기력증 무기력감은 삶의 목적과 의미를 잃고, 아무 일도 하지 못하는 상태를 말합니다. 이 증상은 우울증과 함께 나타날 수 있지만, 우울감만으로는 설명이 안되는 경우가 많습니다. 무기력감은 수면 문제, 식욕 변화, 집중력 저하 등의 증상이 동반될 수 있습니다.\n",
       "\n",
       "### Instruction:\n",
       "너무 우울해.\n",
       "\n",
       "### Response:\n",
-      "그럴 때는 힘들죠.<|end_of_text|>\n"
+      "증상: 우울감 우울감은 우울한 기분이 지속적으로 지속되는 것을 말합니다. 우울감은 신체적 증상(의욕 상실, 식욕 변화, 수면 장애, 피로감 등)이 동반될 수 있습니다.<|end_of_text|>\n"
      ]
     }
    ],
    "source": [
-    "# 추론해보기\n",
-    "FastLanguageModel.for_inference(model)  # 네이티브 2배 빠른 추론 활성화\n",
-    "\n",
-    "# 추론을 위한 입력 준비\n",
+    "# 2. 추론을 위한 입력 준비\n",
     "inputs = tokenizer(\n",
-    "[\n",
-    "    alpaca_prompt.format(\n",
-    "        \"너무 우울해.\", # 인스트럭션 (명령어)\n",
-    "        \"\", # 출력 - 생성할 답변을 비워둠\n",
-    "    )\n",
-    "], return_tensors = \"pt\").to(\"cuda\")  # 텐서를 PyTorch 형식으로 변환하고 GPU로 이동\n",
+    "    one_shot_prompt,\n",
+    "    return_tensors=\"pt\"\n",
+    ").to(\"cuda\")\n",
     "\n",
-    "from transformers import TextStreamer  # 텍스트 스트리밍을 위한 TextStreamer 임포트\n",
+    "# 3. TextStreamer 초기화\n",
+    "text_streamer = TextStreamer(tokenizer)\n",
     "\n",
-    "text_streamer = TextStreamer(tokenizer)  # 토크나이저를 사용하여 스트리머 초기화\n",
-    "\n",
-    "# 모델을 사용하여 텍스트 생성 및 스트리밍 출력\n",
-    "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 128)  # 최대 128개의 새로운 토큰 생성"
+    "# 4. 모델을 사용하여 텍스트 생성 및 스트리밍 출력\n",
+    "output = model.generate(\n",
+    "    **inputs,\n",
+    "    streamer=text_streamer,\n",
+    "    max_new_tokens=128,\n",
+    "    do_sample=True,\n",
+    "    temperature=0.7,\n",
+    "    top_p=0.9\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'그럴 때는 힘들죠.'"
+       "'증상: 우울감 우울감은 우울한 기분이 지속적으로 지속되는 것을 말합니다. 우울감은 신체적 증상(의욕 상실, 식욕 변화, 수면 장애, 피로감 등)이 동반될 수 있습니다.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 답변만 추출\n",
-    "generated_text = tokenizer.decode(_[0], skip_special_tokens=True)\n",
-    "generated_text.split(\"### Response:\")[1].strip()"
+    "# 5. 답변만 추출\n",
+    "generated_text = tokenizer.decode(output[0], skip_special_tokens=True)\n",
+    "generated_text.split(\"### Response:\")[-1].strip()"
    ]
   }
  ],
